refactor: make SpadesGame a thin adapter over SpadesEngine
The singleton now holds setup inputs plus an immutable GameState and
delegates every rule transition to the pure Kotlin engine. Public API
and user-visible behaviour are unchanged.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>